// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`full article with style 1`] = `
.c14 {
  color: #333333;
  display: block;
  font-family: "TimesDigitalW04-Regular";
  line-height: 26px;
  font-size: 17px;
  margin: 0 auto 25px;
  padding-right: 10px;
  padding-left: 10px;
}

.c17 {
  padding-left: 10px;
}

.c13 {
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 25px;
}

.c18 {
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 25px;
}

.c19 {
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 0;
  display: block;
}

.c16 {
  padding-left: 10px;
  padding-right: 10px;
  margin-bottom: 10px;
}

.c15 {
  display: block;
}

.c1 {
  display: block;
}

.c0 {
  display: none;
}

.c12 {
  display: block;
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.c11 {
  height: 55px;
  margin-top: 30px;
  margin-bottom: 30px;
  border-bottom-width: 1px;
  border-top-width: 1px;
  border-top-color: #DBDBDB;
  border-bottom-color: #DBDBDB;
}

.c10 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-top: 5px;
}

.c4 {
  padding-top: 5px;
  padding-bottom: 15px;
}

.c2 {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c9 {
  display: none;
}

.c6 {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

@media (min-width:768px) {
  .c14 {
    font-size: 18px;
    line-height: 30px;
    padding-left: 0;
    padding-right: 0;
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c14 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c17 {
    padding-left: 0px;
  }
}

@media (min-width:768px) {
  .c13 {
    width: 80.8%;
    margin: 0 auto;
  }
}

@media (min-width:1024px) {
  .c13 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c18 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c18 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c19 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c19 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c16 {
    width: 50%;
    float: left;
    margin-right: 20px;
    margin-bottom: 0px;
    margin-top: 5px;
    padding-left: 0px;
    padding-right: 0px;
  }
}

@media (min-width:768px) {
  .c15 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c15 {
    width: 56.2%;
  }
}

@media (min-width:1024px) {
  .c1 {
    padding-top: 20px;
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    border-top-color: #DBDBDB;
    border-bottom-color: #DBDBDB;
    border-bottom-width: 1px;
    padding-top: 10px;
    padding-bottom: 10px;
  }
}

@media (max-width:1320px) {
  .c11 {
    position: -webkit-sticky;
    position: sticky;
    left: 0;
    top: 0;
    z-index: 999;
  }
}

@media (min-width:768px) {
  .c11 {
    width: 80.8%;
    margin-left: auto !important;
    margin-right: auto !important;
  }
}

@media (min-width:1024px) {
  .c11 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c10 {
    margin-top: 0;
  }
}

@media (min-width:768px) {
  .c4 {
    padding-top: 0;
  }
}

@media (min-width:768px) {
  .c2 {
    width: 80.8%;
    margin-top: 0;
    margin-left: auto !important;
    margin-right: auto !important;
    margin-bottom: 30px;
  }
}

@media (min-width:1024px) {
  .c2 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c3 {
    font-size: 45px;
    line-height: 50px;
    margin-bottom: 5px;
  }
}

@media (min-width:768px) {
  .c8 {
    margin-top: 0;
  }
}

@media (min-width:768px) {
  .c7 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }
}

@media (min-width:768px) {
  .c9 {
    background-color: #DBDBDB;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    height: 15px;
    margin: 0 10px;
    width: 1px;
  }
}

@media (min-width:768px) {
  .c5 {
    font-size: 22px;
    line-height: 30px;
    margin-bottom: 25px;
  }
}

@media (min-width:1024px) {
  .c5 {
    margin-bottom: 20px;
  }
}

@media (min-width:1024px) {
  .c6 {
    width: 100%;
    margin-left: auto;
    margin-right: auto;
  }
}

<style>
.S1 {
  -ms-flex-align: stretch;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  align-items: stretch;
  -ms-flex-preferred-size: auto;
  -webkit-flex-basis: auto;
  flex-basis: auto;
  margin-top: 0px;
  margin-bottom: 0px;
  padding-top: 0px;
  padding-bottom: 0px;
}

.S2 {
  font-weight: 400;
  line-height: 12px;
  margin-bottom: 0px;
  margin-top: -1px;
  padding-bottom: 0px;
  padding-top: 1px;
}

.S3 {
  -ms-flex-align: stretch;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  align-items: stretch;
  -ms-flex-preferred-size: auto;
  -webkit-flex-basis: auto;
  flex-basis: auto;
  margin-top: 0px;
  margin-bottom: 10px;
  padding-top: 0px;
  padding-bottom: 0px;
}

.S4 {
  font-weight: inherit;
  line-height: 33px;
  margin-top: 0px;
  margin-bottom: 10px;
  padding-top: 0px;
  padding-bottom: 0px;
}

.S5 {
  font-weight: inherit;
  line-height: 26px;
  margin-top: 0px;
  margin-bottom: 15px;
  padding-top: 0px;
  padding-bottom: 0px;
}

.S6 {
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  align-items: center;
  -ms-flex-preferred-size: auto;
  -webkit-flex-basis: auto;
  flex-basis: auto;
  margin-top: 0px;
  margin-bottom: 0px;
  padding-bottom: 45px;
  padding-top: 60px;
}

.S7 {
  -ms-flex-align: stretch;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  align-items: stretch;
  -ms-flex-preferred-size: auto;
  -webkit-flex-basis: auto;
  flex-basis: auto;
  -ms-flex-pack: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-top: 0px;
  margin-bottom: 0px;
  padding-top: 0px;
  padding-bottom: 0px;
}

.S8 {
  font-weight: inherit;
  line-height: 15px;
  margin-bottom: 0px;
  margin-top: 5px;
  padding-top: 0px;
  padding-bottom: 0px;
}

.S9 {
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  align-items: center;
  -ms-flex-preferred-size: auto;
  -webkit-flex-basis: auto;
  flex-basis: auto;
  margin-top: 0px;
  margin-bottom: 0px;
  padding-bottom: 6px;
  padding-top: 10px;
}

.S10 {
  font-weight: inherit;
  margin-top: 0px;
  margin-bottom: 0px;
  padding-top: 0px;
  padding-bottom: 0px;
}

.S11 {
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  align-items: center;
  -ms-flex-preferred-size: auto;
  -webkit-flex-basis: auto;
  flex-basis: auto;
  margin-top: 0px;
  margin-bottom: 0px;
}

.S12 {
  -ms-flex-align: stretch;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  align-items: stretch;
  margin-top: 0px;
  margin-bottom: 0px;
  padding-top: 0px;
  padding-bottom: 0px;
}

.S13 {
  -ms-flex-align: stretch;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  align-items: stretch;
  -ms-flex-preferred-size: auto;
  -webkit-flex-basis: auto;
  flex-basis: auto;
  margin-top: 0px;
  margin-bottom: 0px;
  padding-top: 0px;
}

.S14 {
  font-weight: inherit;
  line-height: 17px;
  margin-top: 0px;
  margin-bottom: 0px;
  padding-top: 0px;
  padding-bottom: 0px;
}

.S15 {
  -ms-flex-align: stretch;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  align-items: stretch;
  -ms-flex-preferred-size: auto;
  -webkit-flex-basis: auto;
  flex-basis: auto;
  margin-top: 0px;
  margin-bottom: 0px;
  padding-bottom: 0px;
  padding-top: 10px;
}

.IS1 {
  margin-bottom: 0;
}

.IS2 {
  color: rgba(255,255,255,1.00);
}

.IS3 {
  color: rgba(255,255,255,1.00);
}

.IS4 {
  color: rgba(255,255,255,1.00);
}

.IS5 {
  background-color: rgba(60,129,190,1.00);
  -webkit-order: 2;
  order: 2;
  width: 100%;
  -ms-flex-order: 2;
}

.IS6 {
  margin-bottom: 20px;
}

.IS7 {
  line-height: 14px;
}

.IS8 {
  padding-top: 15px;
  padding-right: 15px;
  padding-bottom: 15px;
  padding-left: 15px;
}

.IS9 {
  line-height: 14px;
}

.IS10 {
  padding-top: 15px;
  padding-right: 15px;
  padding-bottom: 15px;
  padding-left: 15px;
}

.IS11 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
  -ms-flex-pack: justify;
  -webkit-box-pack: justify;
}

.IS12 {
  font-family: TimesDigitalW04;
  font-size: 17;
  line-height: 30;
  color: #333333;
  margin-bottom: 25px;
  margin-top: 0;
}

.IS13 {
  height: 100%;
  width: 100%;
}

.IS14 {
  position: relative;
}

.IS15 {
  height: 100%;
  width: 100%;
}

.IS16 {
  height: 100%;
  position: absolute;
  width: 100%;
}

.IS17 {
  padding-bottom: 56.25%;
}

.IS18 {
  margin: 0;
}

.IS19 {
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1;
  border-top-color: #DBDBDB;
  border-top-width: 1;
  margin-bottom: 30px;
  padding-horizontal: 10px;
  padding-vertical: 10px;
  margin-top: 30px;
}
</style>

<article>
  <Helmet>
    <title>
      Some Headline
       | 
      
      The Times
    </title>
    <meta />
    <meta />
    
    <meta />
    <meta />
    <meta />
    <meta />
    <meta />
    <meta />
    <meta />
    <meta />
  </Helmet>
  <div
    className="c0 S1"
  >
    <Ad
      className="IS1"
    />
  </div>
  <div
    className="c1 S1"
  >
    <div
      className="IS5 S1"
    >
      <div
        className="c2 S6"
      >
        <div
          className="S3"
        >
          <div
            className="IS2 S2"
          >
            SOME LABEL
          </div>
        </div>
        <h1
          className="c3 IS3 S4"
        >
          Some Headline
        </h1>
        <div
          className="c4 S1"
        >
          <ArticleFlags />
        </div>
        <h2
          className="c5 IS4 S5"
        >
          Some Standfirst
        </h2>
      </div>
    </div>
    <ArticleLeadAsset
      className="c6 IS6"
    />
    <div
      className="c2 S9"
    >
      <div
        className="c7 S1"
      >
        <div
          className="c8 S7"
        >
          <ArticleBylineWithLinks />
        </div>
        <div
          className="c9 S1"
        />
        <div
          className="c8 S7"
        >
          <div
            className="c10 S8"
          >
            <DatePublication />
          </div>
        </div>
      </div>
    </div>
    <div
      className="c11 S1"
    >
      <div>
        <div
          className="IS11 S12"
        >
          <div
            className="IS8 S11"
          >
            <div
              className="IS7 S10"
            >
              Share
            </div>
            <Link>
              <svg>
                <title>
                  Share by email client
                </title>
                <g>
                  <path />
                </g>
              </svg>
            </Link>
            <Link>
              <svg>
                <title>
                  Share on tweeter
                </title>
                <path />
              </svg>
            </Link>
            <Link>
              <svg>
                <title>
                  Share on facebook
                </title>
                <g>
                  <path />
                </g>
              </svg>
            </Link>
            <Link>
              <svg>
                <title>
                  Copy link o clipboard
                </title>
                <path />
              </svg>
            </Link>
          </div>
          <div
            className="IS10 S11"
          >
            <div
              className="IS9 S10"
            >
              Save
            </div>
            <Link>
              <svg>
                <title>
                  Save to My Articles
                </title>
                <path />
              </svg>
            </Link>
          </div>
        </div>
      </div>
    </div>
    <div
      className="c12 S1"
    >
      <div>
        <div
          className="c13 S1"
        >
          <ArticleImage />
        </div>
      </div>
      <Link>
        Some Link
      </Link>
      <p
        className="c14 IS12"
      >
        Some content
      </p>
      <div
        className="c15 S1"
      >
        <div
          className="c16 S1"
        >
          <PullQuote>
            The pull quote content
          </PullQuote>
        </div>
      </div>
      <div
        className="c13 S1"
      >
        <figure
          className="IS18"
        >
          <div
            className="IS17 S13"
          >
            <div
              className="IS16 S1"
            >
              <div
                className="IS15"
              >
                <div
                  className="IS14"
                >
                  <video
                    className="video-js IS13"
                  />
                </div>
              </div>
            </div>
          </div>
          <figcaption>
            <div
              className="c17 S1"
            >
              <div
                className="S1"
              >
                <div
                  className="S15"
                >
                  <div
                    className="S14"
                  >
                    This is video caption
                  </div>
                </div>
              </div>
            </div>
          </figcaption>
        </figure>
      </div>
      <Ad
        className="IS19"
      />
      <div>
        <div
          className="c18 S1"
        >
          <ArticleImage />
        </div>
      </div>
      <div>
        <div
          className="c19 S1"
        >
          <ArticleImage />
        </div>
      </div>
      <ArticleExtras />
    </div>
  </div>
</article>
`;

exports[`full article with style in the culture magazine 1`] = `
.c14 {
  color: #333333;
  display: block;
  font-family: "TimesDigitalW04-Regular";
  line-height: 26px;
  font-size: 17px;
  margin: 0 auto 25px;
  padding-right: 10px;
  padding-left: 10px;
}

.c17 {
  padding-left: 10px;
}

.c13 {
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 25px;
}

.c18 {
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 25px;
}

.c19 {
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 0;
  display: block;
}

.c16 {
  padding-left: 10px;
  padding-right: 10px;
  margin-bottom: 10px;
}

.c15 {
  display: block;
}

.c1 {
  display: block;
}

.c0 {
  display: none;
}

.c12 {
  display: block;
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.c11 {
  height: 55px;
  margin-top: 30px;
  margin-bottom: 30px;
  border-bottom-width: 1px;
  border-top-width: 1px;
  border-top-color: #DBDBDB;
  border-bottom-color: #DBDBDB;
}

.c10 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-top: 5px;
}

.c4 {
  padding-top: 5px;
  padding-bottom: 15px;
}

.c2 {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c9 {
  display: none;
}

.c6 {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

@media (min-width:768px) {
  .c14 {
    font-size: 18px;
    line-height: 30px;
    padding-left: 0;
    padding-right: 0;
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c14 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c17 {
    padding-left: 0px;
  }
}

@media (min-width:768px) {
  .c13 {
    width: 80.8%;
    margin: 0 auto;
  }
}

@media (min-width:1024px) {
  .c13 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c18 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c18 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c19 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c19 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c16 {
    width: 50%;
    float: left;
    margin-right: 20px;
    margin-bottom: 0px;
    margin-top: 5px;
    padding-left: 0px;
    padding-right: 0px;
  }
}

@media (min-width:768px) {
  .c15 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c15 {
    width: 56.2%;
  }
}

@media (min-width:1024px) {
  .c1 {
    padding-top: 20px;
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    border-top-color: #DBDBDB;
    border-bottom-color: #DBDBDB;
    border-bottom-width: 1px;
    padding-top: 10px;
    padding-bottom: 10px;
  }
}

@media (max-width:1320px) {
  .c11 {
    position: -webkit-sticky;
    position: sticky;
    left: 0;
    top: 0;
    z-index: 999;
  }
}

@media (min-width:768px) {
  .c11 {
    width: 80.8%;
    margin-left: auto !important;
    margin-right: auto !important;
  }
}

@media (min-width:1024px) {
  .c11 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c10 {
    margin-top: 0;
  }
}

@media (min-width:768px) {
  .c4 {
    padding-top: 0;
  }
}

@media (min-width:768px) {
  .c2 {
    width: 80.8%;
    margin-top: 0;
    margin-left: auto !important;
    margin-right: auto !important;
    margin-bottom: 30px;
  }
}

@media (min-width:1024px) {
  .c2 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c3 {
    font-size: 45px;
    line-height: 50px;
    margin-bottom: 5px;
  }
}

@media (min-width:768px) {
  .c8 {
    margin-top: 0;
  }
}

@media (min-width:768px) {
  .c7 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }
}

@media (min-width:768px) {
  .c9 {
    background-color: #DBDBDB;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    height: 15px;
    margin: 0 10px;
    width: 1px;
  }
}

@media (min-width:768px) {
  .c5 {
    font-size: 22px;
    line-height: 30px;
    margin-bottom: 25px;
  }
}

@media (min-width:1024px) {
  .c5 {
    margin-bottom: 20px;
  }
}

@media (min-width:1024px) {
  .c6 {
    width: 100%;
    margin-left: auto;
    margin-right: auto;
  }
}

<style>
.S1 {
  -ms-flex-align: stretch;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  align-items: stretch;
  -ms-flex-preferred-size: auto;
  -webkit-flex-basis: auto;
  flex-basis: auto;
  margin-top: 0px;
  margin-bottom: 0px;
  padding-top: 0px;
  padding-bottom: 0px;
}

.S2 {
  font-weight: 400;
  line-height: 12px;
  margin-bottom: 0px;
  margin-top: -1px;
  padding-bottom: 0px;
  padding-top: 1px;
}

.S3 {
  -ms-flex-align: stretch;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  align-items: stretch;
  -ms-flex-preferred-size: auto;
  -webkit-flex-basis: auto;
  flex-basis: auto;
  margin-top: 0px;
  margin-bottom: 10px;
  padding-top: 0px;
  padding-bottom: 0px;
}

.S4 {
  font-weight: inherit;
  line-height: 33px;
  margin-top: 0px;
  margin-bottom: 10px;
  padding-top: 0px;
  padding-bottom: 0px;
}

.S5 {
  font-weight: inherit;
  line-height: 26px;
  margin-top: 0px;
  margin-bottom: 15px;
  padding-top: 0px;
  padding-bottom: 0px;
}

.S6 {
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  align-items: center;
  -ms-flex-preferred-size: auto;
  -webkit-flex-basis: auto;
  flex-basis: auto;
  margin-top: 0px;
  margin-bottom: 0px;
  padding-bottom: 45px;
  padding-top: 60px;
}

.S7 {
  -ms-flex-align: stretch;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  align-items: stretch;
  -ms-flex-preferred-size: auto;
  -webkit-flex-basis: auto;
  flex-basis: auto;
  -ms-flex-pack: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-top: 0px;
  margin-bottom: 0px;
  padding-top: 0px;
  padding-bottom: 0px;
}

.S8 {
  font-weight: inherit;
  line-height: 15px;
  margin-bottom: 0px;
  margin-top: 5px;
  padding-top: 0px;
  padding-bottom: 0px;
}

.S9 {
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  align-items: center;
  -ms-flex-preferred-size: auto;
  -webkit-flex-basis: auto;
  flex-basis: auto;
  margin-top: 0px;
  margin-bottom: 0px;
  padding-bottom: 6px;
  padding-top: 10px;
}

.S10 {
  font-weight: inherit;
  margin-top: 0px;
  margin-bottom: 0px;
  padding-top: 0px;
  padding-bottom: 0px;
}

.S11 {
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  align-items: center;
  -ms-flex-preferred-size: auto;
  -webkit-flex-basis: auto;
  flex-basis: auto;
  margin-top: 0px;
  margin-bottom: 0px;
}

.S12 {
  -ms-flex-align: stretch;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  align-items: stretch;
  margin-top: 0px;
  margin-bottom: 0px;
  padding-top: 0px;
  padding-bottom: 0px;
}

.S13 {
  -ms-flex-align: stretch;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  align-items: stretch;
  -ms-flex-preferred-size: auto;
  -webkit-flex-basis: auto;
  flex-basis: auto;
  margin-top: 0px;
  margin-bottom: 0px;
  padding-top: 0px;
}

.S14 {
  font-weight: inherit;
  line-height: 17px;
  margin-top: 0px;
  margin-bottom: 0px;
  padding-top: 0px;
  padding-bottom: 0px;
}

.S15 {
  -ms-flex-align: stretch;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  align-items: stretch;
  -ms-flex-preferred-size: auto;
  -webkit-flex-basis: auto;
  flex-basis: auto;
  margin-top: 0px;
  margin-bottom: 0px;
  padding-bottom: 0px;
  padding-top: 10px;
}

.IS1 {
  margin-bottom: 0;
}

.IS2 {
  color: rgba(255,255,255,1.00);
}

.IS3 {
  color: rgba(255,255,255,1.00);
  font-family: Flama-Bold;
}

.IS4 {
  color: rgba(255,255,255,1.00);
}

.IS5 {
  background-color: rgba(60,129,190,1.00);
  -webkit-order: 2;
  order: 2;
  width: 100%;
  -ms-flex-order: 2;
}

.IS6 {
  margin-bottom: 20px;
}

.IS7 {
  line-height: 14px;
}

.IS8 {
  padding-top: 15px;
  padding-right: 15px;
  padding-bottom: 15px;
  padding-left: 15px;
}

.IS9 {
  line-height: 14px;
}

.IS10 {
  padding-top: 15px;
  padding-right: 15px;
  padding-bottom: 15px;
  padding-left: 15px;
}

.IS11 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
  -ms-flex-pack: justify;
  -webkit-box-pack: justify;
}

.IS12 {
  font-family: TimesDigitalW04;
  font-size: 17;
  line-height: 30;
  color: #333333;
  margin-bottom: 25px;
  margin-top: 0;
}

.IS13 {
  height: 100%;
  width: 100%;
}

.IS14 {
  position: relative;
}

.IS15 {
  height: 100%;
  width: 100%;
}

.IS16 {
  height: 100%;
  position: absolute;
  width: 100%;
}

.IS17 {
  padding-bottom: 56.25%;
}

.IS18 {
  margin: 0;
}

.IS19 {
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1;
  border-top-color: #DBDBDB;
  border-top-width: 1;
  margin-bottom: 30px;
  padding-horizontal: 10px;
  padding-vertical: 10px;
  margin-top: 30px;
}
</style>

<article>
  <Helmet>
    <title>
      Some Headline
       | 
      
      The Times
    </title>
    <meta />
    <meta />
    
    <meta />
    <meta />
    <meta />
    <meta />
    <meta />
    <meta />
    <meta />
    <meta />
  </Helmet>
  <div
    className="c0 S1"
  >
    <Ad
      className="IS1"
    />
  </div>
  <div
    className="c1 S1"
  >
    <div
      className="IS5 S1"
    >
      <div
        className="c2 S6"
      >
        <div
          className="S3"
        >
          <div
            className="IS2 S2"
          >
            SOME LABEL
          </div>
        </div>
        <h1
          className="c3 IS3 S4"
        >
          Some Headline
        </h1>
        <div
          className="c4 S1"
        >
          <ArticleFlags />
        </div>
        <h2
          className="c5 IS4 S5"
        >
          Some Standfirst
        </h2>
      </div>
    </div>
    <ArticleLeadAsset
      className="c6 IS6"
    />
    <div
      className="c2 S9"
    >
      <div
        className="c7 S1"
      >
        <div
          className="c8 S7"
        >
          <ArticleBylineWithLinks />
        </div>
        <div
          className="c9 S1"
        />
        <div
          className="c8 S7"
        >
          <div
            className="c10 S8"
          >
            <DatePublication />
          </div>
        </div>
      </div>
    </div>
    <div
      className="c11 S1"
    >
      <div>
        <div
          className="IS11 S12"
        >
          <div
            className="IS8 S11"
          >
            <div
              className="IS7 S10"
            >
              Share
            </div>
            <Link>
              <svg>
                <title>
                  Share by email client
                </title>
                <g>
                  <path />
                </g>
              </svg>
            </Link>
            <Link>
              <svg>
                <title>
                  Share on tweeter
                </title>
                <path />
              </svg>
            </Link>
            <Link>
              <svg>
                <title>
                  Share on facebook
                </title>
                <g>
                  <path />
                </g>
              </svg>
            </Link>
            <Link>
              <svg>
                <title>
                  Copy link o clipboard
                </title>
                <path />
              </svg>
            </Link>
          </div>
          <div
            className="IS10 S11"
          >
            <div
              className="IS9 S10"
            >
              Save
            </div>
            <Link>
              <svg>
                <title>
                  Save to My Articles
                </title>
                <path />
              </svg>
            </Link>
          </div>
        </div>
      </div>
    </div>
    <div
      className="c12 S1"
    >
      <div>
        <div
          className="c13 S1"
        >
          <ArticleImage />
        </div>
      </div>
      <Link>
        Some Link
      </Link>
      <p
        className="c14 IS12"
      >
        Some content
      </p>
      <div
        className="c15 S1"
      >
        <div
          className="c16 S1"
        >
          <PullQuote>
            The pull quote content
          </PullQuote>
        </div>
      </div>
      <div
        className="c13 S1"
      >
        <figure
          className="IS18"
        >
          <div
            className="IS17 S13"
          >
            <div
              className="IS16 S1"
            >
              <div
                className="IS15"
              >
                <div
                  className="IS14"
                >
                  <video
                    className="video-js IS13"
                  />
                </div>
              </div>
            </div>
          </div>
          <figcaption>
            <div
              className="c17 S1"
            >
              <div
                className="S1"
              >
                <div
                  className="S15"
                >
                  <div
                    className="S14"
                  >
                    This is video caption
                  </div>
                </div>
              </div>
            </div>
          </figcaption>
        </figure>
      </div>
      <Ad
        className="IS19"
      />
      <div>
        <div
          className="c18 S1"
        >
          <ArticleImage />
        </div>
      </div>
      <div>
        <div
          className="c19 S1"
        >
          <ArticleImage />
        </div>
      </div>
      <ArticleExtras />
    </div>
  </div>
</article>
`;

exports[`full article with style in the style magazine 1`] = `
.c14 {
  color: #333333;
  display: block;
  font-family: "TimesDigitalW04-Regular";
  line-height: 26px;
  font-size: 17px;
  margin: 0 auto 25px;
  padding-right: 10px;
  padding-left: 10px;
}

.c17 {
  padding-left: 10px;
}

.c13 {
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 25px;
}

.c18 {
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 25px;
}

.c19 {
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 0;
  display: block;
}

.c16 {
  padding-left: 10px;
  padding-right: 10px;
  margin-bottom: 10px;
}

.c15 {
  display: block;
}

.c1 {
  display: block;
}

.c0 {
  display: none;
}

.c12 {
  display: block;
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.c11 {
  height: 55px;
  margin-top: 30px;
  margin-bottom: 30px;
  border-bottom-width: 1px;
  border-top-width: 1px;
  border-top-color: #DBDBDB;
  border-bottom-color: #DBDBDB;
}

.c10 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-top: 5px;
}

.c4 {
  padding-top: 5px;
  padding-bottom: 15px;
}

.c2 {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c9 {
  display: none;
}

.c6 {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

@media (min-width:768px) {
  .c14 {
    font-size: 18px;
    line-height: 30px;
    padding-left: 0;
    padding-right: 0;
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c14 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c17 {
    padding-left: 0px;
  }
}

@media (min-width:768px) {
  .c13 {
    width: 80.8%;
    margin: 0 auto;
  }
}

@media (min-width:1024px) {
  .c13 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c18 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c18 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c19 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c19 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c16 {
    width: 50%;
    float: left;
    margin-right: 20px;
    margin-bottom: 0px;
    margin-top: 5px;
    padding-left: 0px;
    padding-right: 0px;
  }
}

@media (min-width:768px) {
  .c15 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c15 {
    width: 56.2%;
  }
}

@media (min-width:1024px) {
  .c1 {
    padding-top: 20px;
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    border-top-color: #DBDBDB;
    border-bottom-color: #DBDBDB;
    border-bottom-width: 1px;
    padding-top: 10px;
    padding-bottom: 10px;
  }
}

@media (max-width:1320px) {
  .c11 {
    position: -webkit-sticky;
    position: sticky;
    left: 0;
    top: 0;
    z-index: 999;
  }
}

@media (min-width:768px) {
  .c11 {
    width: 80.8%;
    margin-left: auto !important;
    margin-right: auto !important;
  }
}

@media (min-width:1024px) {
  .c11 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c10 {
    margin-top: 0;
  }
}

@media (min-width:768px) {
  .c4 {
    padding-top: 0;
  }
}

@media (min-width:768px) {
  .c2 {
    width: 80.8%;
    margin-top: 0;
    margin-left: auto !important;
    margin-right: auto !important;
    margin-bottom: 30px;
  }
}

@media (min-width:1024px) {
  .c2 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c3 {
    font-size: 45px;
    line-height: 50px;
    margin-bottom: 5px;
  }
}

@media (min-width:768px) {
  .c8 {
    margin-top: 0;
  }
}

@media (min-width:768px) {
  .c7 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }
}

@media (min-width:768px) {
  .c9 {
    background-color: #DBDBDB;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    height: 15px;
    margin: 0 10px;
    width: 1px;
  }
}

@media (min-width:768px) {
  .c5 {
    font-size: 22px;
    line-height: 30px;
    margin-bottom: 25px;
  }
}

@media (min-width:1024px) {
  .c5 {
    margin-bottom: 20px;
  }
}

@media (min-width:1024px) {
  .c6 {
    width: 100%;
    margin-left: auto;
    margin-right: auto;
  }
}

<style>
.S1 {
  -ms-flex-align: stretch;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  align-items: stretch;
  -ms-flex-preferred-size: auto;
  -webkit-flex-basis: auto;
  flex-basis: auto;
  margin-top: 0px;
  margin-bottom: 0px;
  padding-top: 0px;
  padding-bottom: 0px;
}

.S2 {
  font-weight: 400;
  line-height: 12px;
  margin-bottom: 0px;
  margin-top: -1px;
  padding-bottom: 0px;
  padding-top: 1px;
}

.S3 {
  -ms-flex-align: stretch;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  align-items: stretch;
  -ms-flex-preferred-size: auto;
  -webkit-flex-basis: auto;
  flex-basis: auto;
  margin-top: 0px;
  margin-bottom: 10px;
  padding-top: 0px;
  padding-bottom: 0px;
}

.S4 {
  font-weight: inherit;
  line-height: 33px;
  margin-top: 0px;
  margin-bottom: 10px;
  padding-top: 0px;
  padding-bottom: 0px;
}

.S5 {
  font-weight: inherit;
  line-height: 26px;
  margin-top: 0px;
  margin-bottom: 15px;
  padding-top: 0px;
  padding-bottom: 0px;
}

.S6 {
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  align-items: center;
  -ms-flex-preferred-size: auto;
  -webkit-flex-basis: auto;
  flex-basis: auto;
  margin-top: 0px;
  margin-bottom: 0px;
  padding-bottom: 45px;
  padding-top: 60px;
}

.S7 {
  -ms-flex-align: stretch;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  align-items: stretch;
  -ms-flex-preferred-size: auto;
  -webkit-flex-basis: auto;
  flex-basis: auto;
  -ms-flex-pack: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-top: 0px;
  margin-bottom: 0px;
  padding-top: 0px;
  padding-bottom: 0px;
}

.S8 {
  font-weight: inherit;
  line-height: 15px;
  margin-bottom: 0px;
  margin-top: 5px;
  padding-top: 0px;
  padding-bottom: 0px;
}

.S9 {
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  align-items: center;
  -ms-flex-preferred-size: auto;
  -webkit-flex-basis: auto;
  flex-basis: auto;
  margin-top: 0px;
  margin-bottom: 0px;
  padding-bottom: 6px;
  padding-top: 10px;
}

.S10 {
  font-weight: inherit;
  margin-top: 0px;
  margin-bottom: 0px;
  padding-top: 0px;
  padding-bottom: 0px;
}

.S11 {
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  align-items: center;
  -ms-flex-preferred-size: auto;
  -webkit-flex-basis: auto;
  flex-basis: auto;
  margin-top: 0px;
  margin-bottom: 0px;
}

.S12 {
  -ms-flex-align: stretch;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  align-items: stretch;
  margin-top: 0px;
  margin-bottom: 0px;
  padding-top: 0px;
  padding-bottom: 0px;
}

.S13 {
  -ms-flex-align: stretch;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  align-items: stretch;
  -ms-flex-preferred-size: auto;
  -webkit-flex-basis: auto;
  flex-basis: auto;
  margin-top: 0px;
  margin-bottom: 0px;
  padding-top: 0px;
}

.S14 {
  font-weight: inherit;
  line-height: 17px;
  margin-top: 0px;
  margin-bottom: 0px;
  padding-top: 0px;
  padding-bottom: 0px;
}

.S15 {
  -ms-flex-align: stretch;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  align-items: stretch;
  -ms-flex-preferred-size: auto;
  -webkit-flex-basis: auto;
  flex-basis: auto;
  margin-top: 0px;
  margin-bottom: 0px;
  padding-bottom: 0px;
  padding-top: 10px;
}

.IS1 {
  margin-bottom: 0;
}

.IS2 {
  color: rgba(255,255,255,1.00);
}

.IS3 {
  color: rgba(255,255,255,1.00);
  font-family: CenturyGothic-Bold;
}

.IS4 {
  color: rgba(255,255,255,1.00);
}

.IS5 {
  background-color: rgba(60,129,190,1.00);
  -webkit-order: 2;
  order: 2;
  width: 100%;
  -ms-flex-order: 2;
}

.IS6 {
  margin-bottom: 20px;
}

.IS7 {
  line-height: 14px;
}

.IS8 {
  padding-top: 15px;
  padding-right: 15px;
  padding-bottom: 15px;
  padding-left: 15px;
}

.IS9 {
  line-height: 14px;
}

.IS10 {
  padding-top: 15px;
  padding-right: 15px;
  padding-bottom: 15px;
  padding-left: 15px;
}

.IS11 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
  -ms-flex-pack: justify;
  -webkit-box-pack: justify;
}

.IS12 {
  font-family: TimesDigitalW04;
  font-size: 17;
  line-height: 30;
  color: #333333;
  margin-bottom: 25px;
  margin-top: 0;
}

.IS13 {
  height: 100%;
  width: 100%;
}

.IS14 {
  position: relative;
}

.IS15 {
  height: 100%;
  width: 100%;
}

.IS16 {
  height: 100%;
  position: absolute;
  width: 100%;
}

.IS17 {
  padding-bottom: 56.25%;
}

.IS18 {
  margin: 0;
}

.IS19 {
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1;
  border-top-color: #DBDBDB;
  border-top-width: 1;
  margin-bottom: 30px;
  padding-horizontal: 10px;
  padding-vertical: 10px;
  margin-top: 30px;
}
</style>

<article>
  <Helmet>
    <title>
      Some Headline
       | 
      
      The Times
    </title>
    <meta />
    <meta />
    
    <meta />
    <meta />
    <meta />
    <meta />
    <meta />
    <meta />
    <meta />
    <meta />
  </Helmet>
  <div
    className="c0 S1"
  >
    <Ad
      className="IS1"
    />
  </div>
  <div
    className="c1 S1"
  >
    <div
      className="IS5 S1"
    >
      <div
        className="c2 S6"
      >
        <div
          className="S3"
        >
          <div
            className="IS2 S2"
          >
            SOME LABEL
          </div>
        </div>
        <h1
          className="c3 IS3 S4"
        >
          Some Headline
        </h1>
        <div
          className="c4 S1"
        >
          <ArticleFlags />
        </div>
        <h2
          className="c5 IS4 S5"
        >
          Some Standfirst
        </h2>
      </div>
    </div>
    <ArticleLeadAsset
      className="c6 IS6"
    />
    <div
      className="c2 S9"
    >
      <div
        className="c7 S1"
      >
        <div
          className="c8 S7"
        >
          <ArticleBylineWithLinks />
        </div>
        <div
          className="c9 S1"
        />
        <div
          className="c8 S7"
        >
          <div
            className="c10 S8"
          >
            <DatePublication />
          </div>
        </div>
      </div>
    </div>
    <div
      className="c11 S1"
    >
      <div>
        <div
          className="IS11 S12"
        >
          <div
            className="IS8 S11"
          >
            <div
              className="IS7 S10"
            >
              Share
            </div>
            <Link>
              <svg>
                <title>
                  Share by email client
                </title>
                <g>
                  <path />
                </g>
              </svg>
            </Link>
            <Link>
              <svg>
                <title>
                  Share on tweeter
                </title>
                <path />
              </svg>
            </Link>
            <Link>
              <svg>
                <title>
                  Share on facebook
                </title>
                <g>
                  <path />
                </g>
              </svg>
            </Link>
            <Link>
              <svg>
                <title>
                  Copy link o clipboard
                </title>
                <path />
              </svg>
            </Link>
          </div>
          <div
            className="IS10 S11"
          >
            <div
              className="IS9 S10"
            >
              Save
            </div>
            <Link>
              <svg>
                <title>
                  Save to My Articles
                </title>
                <path />
              </svg>
            </Link>
          </div>
        </div>
      </div>
    </div>
    <div
      className="c12 S1"
    >
      <div>
        <div
          className="c13 S1"
        >
          <ArticleImage />
        </div>
      </div>
      <Link>
        Some Link
      </Link>
      <p
        className="c14 IS12"
      >
        Some content
      </p>
      <div
        className="c15 S1"
      >
        <div
          className="c16 S1"
        >
          <PullQuote>
            The pull quote content
          </PullQuote>
        </div>
      </div>
      <div
        className="c13 S1"
      >
        <figure
          className="IS18"
        >
          <div
            className="IS17 S13"
          >
            <div
              className="IS16 S1"
            >
              <div
                className="IS15"
              >
                <div
                  className="IS14"
                >
                  <video
                    className="video-js IS13"
                  />
                </div>
              </div>
            </div>
          </div>
          <figcaption>
            <div
              className="c17 S1"
            >
              <div
                className="S1"
              >
                <div
                  className="S15"
                >
                  <div
                    className="S14"
                  >
                    This is video caption
                  </div>
                </div>
              </div>
            </div>
          </figcaption>
        </figure>
      </div>
      <Ad
        className="IS19"
      />
      <div>
        <div
          className="c18 S1"
        >
          <ArticleImage />
        </div>
      </div>
      <div>
        <div
          className="c19 S1"
        >
          <ArticleImage />
        </div>
      </div>
      <ArticleExtras />
    </div>
  </div>
</article>
`;

exports[`full article with style in the sunday times magazine 1`] = `
.c14 {
  color: #333333;
  display: block;
  font-family: "TimesDigitalW04-Regular";
  line-height: 26px;
  font-size: 17px;
  margin: 0 auto 25px;
  padding-right: 10px;
  padding-left: 10px;
}

.c17 {
  padding-left: 10px;
}

.c13 {
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding-bottom: 25px;
}

.c18 {
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 25px;
}

.c19 {
  width: 100%;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  padding-left: 10px;
  padding-right: 10px;
  padding-bottom: 0;
  display: block;
}

.c16 {
  padding-left: 10px;
  padding-right: 10px;
  margin-bottom: 10px;
}

.c15 {
  display: block;
}

.c1 {
  display: block;
}

.c0 {
  display: none;
}

.c12 {
  display: block;
  -webkit-order: 3;
  -ms-flex-order: 3;
  order: 3;
}

.c11 {
  height: 55px;
  margin-top: 30px;
  margin-bottom: 30px;
  border-bottom-width: 1px;
  border-top-width: 1px;
  border-top-color: #DBDBDB;
  border-bottom-color: #DBDBDB;
}

.c10 {
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-top: 5px;
}

.c4 {
  padding-top: 5px;
  padding-bottom: 15px;
}

.c2 {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

.c7 {
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c9 {
  display: none;
}

.c6 {
  -webkit-order: 2;
  -ms-flex-order: 2;
  order: 2;
}

@media (min-width:768px) {
  .c14 {
    font-size: 18px;
    line-height: 30px;
    padding-left: 0;
    padding-right: 0;
    width: 80.8%;
  }
}

@media (min-width:1024px) {
  .c14 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c17 {
    padding-left: 0px;
  }
}

@media (min-width:768px) {
  .c13 {
    width: 80.8%;
    margin: 0 auto;
  }
}

@media (min-width:1024px) {
  .c13 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c18 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c18 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c19 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c19 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c16 {
    width: 50%;
    float: left;
    margin-right: 20px;
    margin-bottom: 0px;
    margin-top: 5px;
    padding-left: 0px;
    padding-right: 0px;
  }
}

@media (min-width:768px) {
  .c15 {
    width: 80.8%;
    margin: 0 auto;
    padding-left: 0;
    padding-right: 0;
  }
}

@media (min-width:1024px) {
  .c15 {
    width: 56.2%;
  }
}

@media (min-width:1024px) {
  .c1 {
    padding-top: 20px;
    margin: 0 auto;
  }
}

@media (min-width:768px) {
  .c0 {
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    border-top-color: #DBDBDB;
    border-bottom-color: #DBDBDB;
    border-bottom-width: 1px;
    padding-top: 10px;
    padding-bottom: 10px;
  }
}

@media (max-width:1320px) {
  .c11 {
    position: -webkit-sticky;
    position: sticky;
    left: 0;
    top: 0;
    z-index: 999;
  }
}

@media (min-width:768px) {
  .c11 {
    width: 80.8%;
    margin-left: auto !important;
    margin-right: auto !important;
  }
}

@media (min-width:1024px) {
  .c11 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c10 {
    margin-top: 0;
  }
}

@media (min-width:768px) {
  .c4 {
    padding-top: 0;
  }
}

@media (min-width:768px) {
  .c2 {
    width: 80.8%;
    margin-top: 0;
    margin-left: auto !important;
    margin-right: auto !important;
    margin-bottom: 30px;
  }
}

@media (min-width:1024px) {
  .c2 {
    width: 56.2%;
  }
}

@media (min-width:768px) {
  .c3 {
    font-size: 45px;
    line-height: 50px;
    margin-bottom: 5px;
  }
}

@media (min-width:768px) {
  .c8 {
    margin-top: 0;
  }
}

@media (min-width:768px) {
  .c7 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
  }
}

@media (min-width:768px) {
  .c9 {
    background-color: #DBDBDB;
    display: -webkit-box;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    height: 15px;
    margin: 0 10px;
    width: 1px;
  }
}

@media (min-width:768px) {
  .c5 {
    font-size: 22px;
    line-height: 30px;
    margin-bottom: 25px;
  }
}

@media (min-width:1024px) {
  .c5 {
    margin-bottom: 20px;
  }
}

@media (min-width:1024px) {
  .c6 {
    width: 100%;
    margin-left: auto;
    margin-right: auto;
  }
}

<style>
.S1 {
  -ms-flex-align: stretch;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  align-items: stretch;
  -ms-flex-preferred-size: auto;
  -webkit-flex-basis: auto;
  flex-basis: auto;
  margin-top: 0px;
  margin-bottom: 0px;
  padding-top: 0px;
  padding-bottom: 0px;
}

.S2 {
  font-weight: 400;
  line-height: 12px;
  margin-bottom: 0px;
  margin-top: -1px;
  padding-bottom: 0px;
  padding-top: 1px;
}

.S3 {
  -ms-flex-align: stretch;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  align-items: stretch;
  -ms-flex-preferred-size: auto;
  -webkit-flex-basis: auto;
  flex-basis: auto;
  margin-top: 0px;
  margin-bottom: 10px;
  padding-top: 0px;
  padding-bottom: 0px;
}

.S4 {
  font-weight: inherit;
  line-height: 33px;
  margin-top: 0px;
  margin-bottom: 10px;
  padding-top: 0px;
  padding-bottom: 0px;
}

.S5 {
  font-weight: inherit;
  line-height: 26px;
  margin-top: 0px;
  margin-bottom: 15px;
  padding-top: 0px;
  padding-bottom: 0px;
}

.S6 {
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  align-items: center;
  -ms-flex-preferred-size: auto;
  -webkit-flex-basis: auto;
  flex-basis: auto;
  margin-top: 0px;
  margin-bottom: 0px;
  padding-bottom: 45px;
  padding-top: 60px;
}

.S7 {
  -ms-flex-align: stretch;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  align-items: stretch;
  -ms-flex-preferred-size: auto;
  -webkit-flex-basis: auto;
  flex-basis: auto;
  -ms-flex-pack: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  margin-top: 0px;
  margin-bottom: 0px;
  padding-top: 0px;
  padding-bottom: 0px;
}

.S8 {
  font-weight: inherit;
  line-height: 15px;
  margin-bottom: 0px;
  margin-top: 5px;
  padding-top: 0px;
  padding-bottom: 0px;
}

.S9 {
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  align-items: center;
  -ms-flex-preferred-size: auto;
  -webkit-flex-basis: auto;
  flex-basis: auto;
  margin-top: 0px;
  margin-bottom: 0px;
  padding-bottom: 6px;
  padding-top: 10px;
}

.S10 {
  font-weight: inherit;
  margin-top: 0px;
  margin-bottom: 0px;
  padding-top: 0px;
  padding-bottom: 0px;
}

.S11 {
  -ms-flex-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  align-items: center;
  -ms-flex-preferred-size: auto;
  -webkit-flex-basis: auto;
  flex-basis: auto;
  margin-top: 0px;
  margin-bottom: 0px;
}

.S12 {
  -ms-flex-align: stretch;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  align-items: stretch;
  margin-top: 0px;
  margin-bottom: 0px;
  padding-top: 0px;
  padding-bottom: 0px;
}

.S13 {
  -ms-flex-align: stretch;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  align-items: stretch;
  -ms-flex-preferred-size: auto;
  -webkit-flex-basis: auto;
  flex-basis: auto;
  margin-top: 0px;
  margin-bottom: 0px;
  padding-top: 0px;
}

.S14 {
  font-weight: inherit;
  line-height: 17px;
  margin-top: 0px;
  margin-bottom: 0px;
  padding-top: 0px;
  padding-bottom: 0px;
}

.S15 {
  -ms-flex-align: stretch;
  -webkit-align-items: stretch;
  -webkit-box-align: stretch;
  align-items: stretch;
  -ms-flex-preferred-size: auto;
  -webkit-flex-basis: auto;
  flex-basis: auto;
  margin-top: 0px;
  margin-bottom: 0px;
  padding-bottom: 0px;
  padding-top: 10px;
}

.IS1 {
  margin-bottom: 0;
}

.IS2 {
  color: rgba(255,255,255,1.00);
}

.IS3 {
  color: rgba(255,255,255,1.00);
  font-family: Tiempos-Headline-Bold;
}

.IS4 {
  color: rgba(255,255,255,1.00);
}

.IS5 {
  background-color: rgba(60,129,190,1.00);
  -webkit-order: 2;
  order: 2;
  width: 100%;
  -ms-flex-order: 2;
}

.IS6 {
  margin-bottom: 20px;
}

.IS7 {
  line-height: 14px;
}

.IS8 {
  padding-top: 15px;
  padding-right: 15px;
  padding-bottom: 15px;
  padding-left: 15px;
}

.IS9 {
  line-height: 14px;
}

.IS10 {
  padding-top: 15px;
  padding-right: 15px;
  padding-bottom: 15px;
  padding-left: 15px;
}

.IS11 {
  -webkit-flex-grow: 1;
  flex-grow: 1;
  -webkit-flex-shrink: 1;
  flex-shrink: 1;
  -webkit-flex-basis: 0%;
  flex-basis: 0%;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -ms-flex-positive: 1;
  -webkit-box-flex: 1;
  -ms-flex-negative: 1;
  -ms-flex-preferred-size: 0%;
  -ms-flex-pack: justify;
  -webkit-box-pack: justify;
}

.IS12 {
  font-family: TimesDigitalW04;
  font-size: 17;
  line-height: 30;
  color: #333333;
  margin-bottom: 25px;
  margin-top: 0;
}

.IS13 {
  height: 100%;
  width: 100%;
}

.IS14 {
  position: relative;
}

.IS15 {
  height: 100%;
  width: 100%;
}

.IS16 {
  height: 100%;
  position: absolute;
  width: 100%;
}

.IS17 {
  padding-bottom: 56.25%;
}

.IS18 {
  margin: 0;
}

.IS19 {
  border-bottom-color: #DBDBDB;
  border-bottom-width: 1;
  border-top-color: #DBDBDB;
  border-top-width: 1;
  margin-bottom: 30px;
  padding-horizontal: 10px;
  padding-vertical: 10px;
  margin-top: 30px;
}
</style>

<article>
  <Helmet>
    <title>
      Some Headline
       | 
      
      The Times
    </title>
    <meta />
    <meta />
    
    <meta />
    <meta />
    <meta />
    <meta />
    <meta />
    <meta />
    <meta />
    <meta />
  </Helmet>
  <div
    className="c0 S1"
  >
    <Ad
      className="IS1"
    />
  </div>
  <div
    className="c1 S1"
  >
    <div
      className="IS5 S1"
    >
      <div
        className="c2 S6"
      >
        <div
          className="S3"
        >
          <div
            className="IS2 S2"
          >
            SOME LABEL
          </div>
        </div>
        <h1
          className="c3 IS3 S4"
        >
          Some Headline
        </h1>
        <div
          className="c4 S1"
        >
          <ArticleFlags />
        </div>
        <h2
          className="c5 IS4 S5"
        >
          Some Standfirst
        </h2>
      </div>
    </div>
    <ArticleLeadAsset
      className="c6 IS6"
    />
    <div
      className="c2 S9"
    >
      <div
        className="c7 S1"
      >
        <div
          className="c8 S7"
        >
          <ArticleBylineWithLinks />
        </div>
        <div
          className="c9 S1"
        />
        <div
          className="c8 S7"
        >
          <div
            className="c10 S8"
          >
            <DatePublication />
          </div>
        </div>
      </div>
    </div>
    <div
      className="c11 S1"
    >
      <div>
        <div
          className="IS11 S12"
        >
          <div
            className="IS8 S11"
          >
            <div
              className="IS7 S10"
            >
              Share
            </div>
            <Link>
              <svg>
                <title>
                  Share by email client
                </title>
                <g>
                  <path />
                </g>
              </svg>
            </Link>
            <Link>
              <svg>
                <title>
                  Share on tweeter
                </title>
                <path />
              </svg>
            </Link>
            <Link>
              <svg>
                <title>
                  Share on facebook
                </title>
                <g>
                  <path />
                </g>
              </svg>
            </Link>
            <Link>
              <svg>
                <title>
                  Copy link o clipboard
                </title>
                <path />
              </svg>
            </Link>
          </div>
          <div
            className="IS10 S11"
          >
            <div
              className="IS9 S10"
            >
              Save
            </div>
            <Link>
              <svg>
                <title>
                  Save to My Articles
                </title>
                <path />
              </svg>
            </Link>
          </div>
        </div>
      </div>
    </div>
    <div
      className="c12 S1"
    >
      <div>
        <div
          className="c13 S1"
        >
          <ArticleImage />
        </div>
      </div>
      <Link>
        Some Link
      </Link>
      <p
        className="c14 IS12"
      >
        Some content
      </p>
      <div
        className="c15 S1"
      >
        <div
          className="c16 S1"
        >
          <PullQuote>
            The pull quote content
          </PullQuote>
        </div>
      </div>
      <div
        className="c13 S1"
      >
        <figure
          className="IS18"
        >
          <div
            className="IS17 S13"
          >
            <div
              className="IS16 S1"
            >
              <div
                className="IS15"
              >
                <div
                  className="IS14"
                >
                  <video
                    className="video-js IS13"
                  />
                </div>
              </div>
            </div>
          </div>
          <figcaption>
            <div
              className="c17 S1"
            >
              <div
                className="S1"
              >
                <div
                  className="S15"
                >
                  <div
                    className="S14"
                  >
                    This is video caption
                  </div>
                </div>
              </div>
            </div>
          </figcaption>
        </figure>
      </div>
      <Ad
        className="IS19"
      />
      <div>
        <div
          className="c18 S1"
        >
          <ArticleImage />
        </div>
      </div>
      <div>
        <div
          className="c19 S1"
        >
          <ArticleImage />
        </div>
      </div>
      <ArticleExtras />
    </div>
  </div>
</article>
`;
